// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return a deployment, an ingress and service 1`] = `
Object {
  "deployment": Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "app_name",
      },
      "name": "app_name",
      "namespace": "namespace_name",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "app_name",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "app_name",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "image_name:image_tag",
              "livenessProbe": Object {
                "failureThreshold": 6,
                "httpGet": Object {
                  "path": "/healthz",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
                "periodSeconds": 5,
                "timeoutSeconds": 5,
              },
              "name": "app_name",
              "ports": Array [
                Object {
                  "containerPort": 1234,
                  "name": "http",
                },
              ],
              "readinessProbe": Object {
                "failureThreshold": 15,
                "httpGet": Object {
                  "path": "/healthz",
                  "port": "http",
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 5,
                "successThreshold": 1,
                "timeoutSeconds": 1,
              },
              "resources": Object {
                "limits": Object {
                  "cpu": "500m",
                  "memory": "128Mi",
                },
                "requests": Object {
                  "cpu": "5m",
                  "memory": "16Mi",
                },
              },
              "startupProbe": Object {
                "failureThreshold": 12,
                "httpGet": Object {
                  "path": "/healthz",
                  "port": "http",
                },
                "periodSeconds": 5,
              },
            },
          ],
        },
      },
    },
  },
  "ingress": Object {
    "apiVersion": "extensions/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "certmanager.k8s.io/cluster-issuer": "letsencrypt-prod",
        "kubernetes.io/ingress.class": "nginx",
        "kubernetes.io/tls-acme": "true",
      },
      "labels": Object {
        "app": "app_name",
      },
      "name": "app_name",
      "namespace": "namespace_name",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "sample.fabrique.social.gouv.fr",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "app_name",
                  "servicePort": 5678,
                },
                "path": "/",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "sample.fabrique.social.gouv.fr",
          ],
        },
      ],
    },
  },
  "service": Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "app_name",
      },
      "name": "app_name",
      "namespace": "namespace_name",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 5678,
          "targetPort": 1234,
        },
      ],
      "selector": Object {
        "app": "app_name",
      },
      "type": "ClusterIP",
    },
  },
}
`;

exports[`should return the models with global params in it 1`] = `
Object {
  "deployment": Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "app": "app_name",
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "app_name",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "app_name",
        },
      },
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "socialgouv-sample",
            "app.gitlab.com/env": "my-test",
          },
          "labels": Object {
            "app": "app_name",
            "application": "sample",
            "owner": "sample",
            "team": "sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "image_name:image_tag",
              "livenessProbe": Object {
                "failureThreshold": 6,
                "httpGet": Object {
                  "path": "/healthz",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
                "periodSeconds": 5,
                "timeoutSeconds": 5,
              },
              "name": "app_name",
              "ports": Array [
                Object {
                  "containerPort": 1234,
                  "name": "http",
                },
              ],
              "readinessProbe": Object {
                "failureThreshold": 15,
                "httpGet": Object {
                  "path": "/healthz",
                  "port": "http",
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 5,
                "successThreshold": 1,
                "timeoutSeconds": 1,
              },
              "resources": Object {
                "limits": Object {
                  "cpu": "500m",
                  "memory": "128Mi",
                },
                "requests": Object {
                  "cpu": "5m",
                  "memory": "16Mi",
                },
              },
              "startupProbe": Object {
                "failureThreshold": 12,
                "httpGet": Object {
                  "path": "/healthz",
                  "port": "http",
                },
                "periodSeconds": 5,
              },
            },
          ],
        },
      },
    },
  },
  "ingress": Object {
    "apiVersion": "extensions/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "kubernetes.io/ingress.class": "nginx",
      },
      "labels": Object {
        "app": "app_name",
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "app_name",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "my.sample.fabrique.social.gouv.fr",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "app_name",
                  "servicePort": 5678,
                },
                "path": "/",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "my.sample.fabrique.social.gouv.fr",
          ],
          "secretName": "sample-crt",
        },
      ],
    },
  },
  "service": Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "app": "app_name",
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "app_name",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 5678,
          "targetPort": 1234,
        },
      ],
      "selector": Object {
        "app": "app_name",
      },
      "type": "ClusterIP",
    },
  },
}
`;

exports[`should throw because of missing variables 1`] = `
"BadArgument:required property \\"containerPort\\"
└─ cannot decode undefined, should be number
required property \\"image\\"
└─ cannot decode undefined, should be object
required property \\"name\\"
└─ cannot decode undefined, should be string
required property \\"namespace\\"
└─ cannot decode undefined, should be object
required property \\"servicePort\\"
└─ cannot decode undefined, should be number"
`;

exports[`should throw because the containerPort is not an integer 1`] = `
"BadArgument:required property \\"containerPort\\"
└─ cannot decode 1234.56789, should be Integer
required property \\"name\\"
└─ cannot decode undefined, should be string
required property \\"servicePort\\"
└─ cannot decode 1234.56789, should be Integer"
`;
